# tiny_ML_bench

./: LICENSE  Makefile  README.md  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
tests/: conftest.py
tests/test_core/: test_base.py
tinybench/core/: __init__.py  base.py  benchmark.py  result.py
tinybench/datasets/: __init__.py
tinybench/metrics/: __init__.py  base_metric.py  classification.py  regression.py
tinybench/models/: __init__.py
tinybench/utils/: __init__.py
